--- a/Dsl/GeneratedCode/DomainModelResx.resx
+++ b/Dsl/GeneratedCode/DomainModelResx.resx
@@ -197,37 +197,37 @@
     <value>Has View</value>
     <comment>DisplayName for DomainProperty &apos;hasView&apos; on DomainClass &apos;Function&apos;</comment>
   </data>
-  <data name="Ufba.Ev.Property.Description" xml:space="preserve">
-    <value>Description for Ufba.Ev.Property</value>
-    <comment>Description for DomainClass &apos;Property&apos;</comment>
+  <data name="Ufba.Ev.Category.Description" xml:space="preserve">
+    <value>Description for Ufba.Ev.Category</value>
+    <comment>Description for DomainClass &apos;Category&apos;</comment>
   </data>
-  <data name="Ufba.Ev.Property.DisplayName" xml:space="preserve">
-    <value>Property</value>
-    <comment>DisplayName for DomainClass &apos;Property&apos;</comment>
+  <data name="Ufba.Ev.Category.DisplayName" xml:space="preserve">
+    <value>Category</value>
+    <comment>DisplayName for DomainClass &apos;Category&apos;</comment>
   </data>
-  <data name="Ufba.Ev.Property/Name.Description" xml:space="preserve">
-    <value>Description for Ufba.Ev.Property.Name</value>
-    <comment>Description for DomainProperty &apos;Name&apos; on DomainClass &apos;Property&apos;</comment>
+  <data name="Ufba.Ev.Category/Name.Description" xml:space="preserve">
+    <value>Description for Ufba.Ev.Category.Name</value>
+    <comment>Description for DomainProperty &apos;Name&apos; on DomainClass &apos;Category&apos;</comment>
   </data>
-  <data name="Ufba.Ev.Property/Name.DisplayName" xml:space="preserve">
+  <data name="Ufba.Ev.Category/Name.DisplayName" xml:space="preserve">
     <value>Name</value>
-    <comment>DisplayName for DomainProperty &apos;Name&apos; on DomainClass &apos;Property&apos;</comment>
+    <comment>DisplayName for DomainProperty &apos;Name&apos; on DomainClass &apos;Category&apos;</comment>
   </data>
-  <data name="Ufba.Ev.Type.Description" xml:space="preserve">
-    <value>Description for Ufba.Ev.Type</value>
-    <comment>Description for DomainClass &apos;Type&apos;</comment>
+  <data name="Ufba.Ev.Command.Description" xml:space="preserve">
+    <value>Description for Ufba.Ev.Command</value>
+    <comment>Description for DomainClass &apos;Command&apos;</comment>
   </data>
-  <data name="Ufba.Ev.Type.DisplayName" xml:space="preserve">
-    <value>Type</value>
-    <comment>DisplayName for DomainClass &apos;Type&apos;</comment>
+  <data name="Ufba.Ev.Command.DisplayName" xml:space="preserve">
+    <value>Command</value>
+    <comment>DisplayName for DomainClass &apos;Command&apos;</comment>
   </data>
-  <data name="Ufba.Ev.Type/Name.Description" xml:space="preserve">
-    <value>Description for Ufba.Ev.Type.Name</value>
-    <comment>Description for DomainProperty &apos;Name&apos; on DomainClass &apos;Type&apos;</comment>
+  <data name="Ufba.Ev.Command/Name.Description" xml:space="preserve">
+    <value>Description for Ufba.Ev.Command.Name</value>
+    <comment>Description for DomainProperty &apos;Name&apos; on DomainClass &apos;Command&apos;</comment>
   </data>
-  <data name="Ufba.Ev.Type/Name.DisplayName" xml:space="preserve">
+  <data name="Ufba.Ev.Command/Name.DisplayName" xml:space="preserve">
     <value>Name</value>
-    <comment>DisplayName for DomainProperty &apos;Name&apos; on DomainClass &apos;Type&apos;</comment>
+    <comment>DisplayName for DomainProperty &apos;Name&apos; on DomainClass &apos;Command&apos;</comment>
   </data>
   <data name="Ufba.Ev.EvModelHasElements.Description" xml:space="preserve">
     <value>Embedding relationship between the Model and Elements</value>
@@ -301,69 +301,69 @@
     <value>Option</value>
     <comment>PropertyDisplayName for DomainRole &apos;Function&apos; on DomainRelationship &apos;OptionHasFunctions&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasProperties.Description" xml:space="preserve">
-    <value>Description for Ufba.Ev.OptionHasProperties</value>
-    <comment>Description for DomainClass &apos;OptionHasProperties&apos;</comment>
+  <data name="Ufba.Ev.OptionHasCategories.Description" xml:space="preserve">
+    <value>Description for Ufba.Ev.OptionHasCategories</value>
+    <comment>Description for DomainClass &apos;OptionHasCategories&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasProperties.DisplayName" xml:space="preserve">
-    <value>Option Has Properties</value>
-    <comment>DisplayName for DomainClass &apos;OptionHasProperties&apos;</comment>
+  <data name="Ufba.Ev.OptionHasCategories.DisplayName" xml:space="preserve">
+    <value>Option Has Categories</value>
+    <comment>DisplayName for DomainClass &apos;OptionHasCategories&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasProperties/Option.Description" xml:space="preserve">
-    <value>Description for Ufba.Ev.OptionHasProperties.Option</value>
-    <comment>Description for DomainRole &apos;Option&apos; on DomainRelationship &apos;OptionHasProperties&apos;</comment>
+  <data name="Ufba.Ev.OptionHasCategories/Option.Description" xml:space="preserve">
+    <value>Description for Ufba.Ev.OptionHasCategories.Option</value>
+    <comment>Description for DomainRole &apos;Option&apos; on DomainRelationship &apos;OptionHasCategories&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasProperties/Option.DisplayName" xml:space="preserve">
+  <data name="Ufba.Ev.OptionHasCategories/Option.DisplayName" xml:space="preserve">
     <value>Option</value>
-    <comment>DisplayName for DomainRole &apos;Option&apos; on DomainRelationship &apos;OptionHasProperties&apos;</comment>
+    <comment>DisplayName for DomainRole &apos;Option&apos; on DomainRelationship &apos;OptionHasCategories&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasProperties/Option.PropertyDisplayName" xml:space="preserve">
-    <value>Properties</value>
-    <comment>PropertyDisplayName for DomainRole &apos;Option&apos; on DomainRelationship &apos;OptionHasProperties&apos;</comment>
+  <data name="Ufba.Ev.OptionHasCategories/Option.PropertyDisplayName" xml:space="preserve">
+    <value>Categories</value>
+    <comment>PropertyDisplayName for DomainRole &apos;Option&apos; on DomainRelationship &apos;OptionHasCategories&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasProperties/Property.Description" xml:space="preserve">
-    <value>Description for Ufba.Ev.OptionHasProperties.Property</value>
-    <comment>Description for DomainRole &apos;Property&apos; on DomainRelationship &apos;OptionHasProperties&apos;</comment>
+  <data name="Ufba.Ev.OptionHasCategories/Category.Description" xml:space="preserve">
+    <value>Description for Ufba.Ev.OptionHasCategories.Category</value>
+    <comment>Description for DomainRole &apos;Category&apos; on DomainRelationship &apos;OptionHasCategories&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasProperties/Property.DisplayName" xml:space="preserve">
-    <value>Property</value>
-    <comment>DisplayName for DomainRole &apos;Property&apos; on DomainRelationship &apos;OptionHasProperties&apos;</comment>
+  <data name="Ufba.Ev.OptionHasCategories/Category.DisplayName" xml:space="preserve">
+    <value>Category</value>
+    <comment>DisplayName for DomainRole &apos;Category&apos; on DomainRelationship &apos;OptionHasCategories&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasProperties/Property.PropertyDisplayName" xml:space="preserve">
+  <data name="Ufba.Ev.OptionHasCategories/Category.PropertyDisplayName" xml:space="preserve">
     <value>Option</value>
-    <comment>PropertyDisplayName for DomainRole &apos;Property&apos; on DomainRelationship &apos;OptionHasProperties&apos;</comment>
+    <comment>PropertyDisplayName for DomainRole &apos;Category&apos; on DomainRelationship &apos;OptionHasCategories&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasTypes.Description" xml:space="preserve">
-    <value>Description for Ufba.Ev.OptionHasTypes</value>
-    <comment>Description for DomainClass &apos;OptionHasTypes&apos;</comment>
+  <data name="Ufba.Ev.OptionHasCommands.Description" xml:space="preserve">
+    <value>Description for Ufba.Ev.OptionHasCommands</value>
+    <comment>Description for DomainClass &apos;OptionHasCommands&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasTypes.DisplayName" xml:space="preserve">
-    <value>Option Has Types</value>
-    <comment>DisplayName for DomainClass &apos;OptionHasTypes&apos;</comment>
+  <data name="Ufba.Ev.OptionHasCommands.DisplayName" xml:space="preserve">
+    <value>Option Has Commands</value>
+    <comment>DisplayName for DomainClass &apos;OptionHasCommands&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasTypes/Option.Description" xml:space="preserve">
-    <value>Description for Ufba.Ev.OptionHasTypes.Option</value>
-    <comment>Description for DomainRole &apos;Option&apos; on DomainRelationship &apos;OptionHasTypes&apos;</comment>
+  <data name="Ufba.Ev.OptionHasCommands/Option.Description" xml:space="preserve">
+    <value>Description for Ufba.Ev.OptionHasCommands.Option</value>
+    <comment>Description for DomainRole &apos;Option&apos; on DomainRelationship &apos;OptionHasCommands&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasTypes/Option.DisplayName" xml:space="preserve">
+  <data name="Ufba.Ev.OptionHasCommands/Option.DisplayName" xml:space="preserve">
     <value>Option</value>
-    <comment>DisplayName for DomainRole &apos;Option&apos; on DomainRelationship &apos;OptionHasTypes&apos;</comment>
+    <comment>DisplayName for DomainRole &apos;Option&apos; on DomainRelationship &apos;OptionHasCommands&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasTypes/Option.PropertyDisplayName" xml:space="preserve">
-    <value>Types</value>
-    <comment>PropertyDisplayName for DomainRole &apos;Option&apos; on DomainRelationship &apos;OptionHasTypes&apos;</comment>
+  <data name="Ufba.Ev.OptionHasCommands/Option.PropertyDisplayName" xml:space="preserve">
+    <value>Commands</value>
+    <comment>PropertyDisplayName for DomainRole &apos;Option&apos; on DomainRelationship &apos;OptionHasCommands&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasTypes/Type.Description" xml:space="preserve">
-    <value>Description for Ufba.Ev.OptionHasTypes.Type</value>
-    <comment>Description for DomainRole &apos;Type&apos; on DomainRelationship &apos;OptionHasTypes&apos;</comment>
+  <data name="Ufba.Ev.OptionHasCommands/Command.Description" xml:space="preserve">
+    <value>Description for Ufba.Ev.OptionHasCommands.Command</value>
+    <comment>Description for DomainRole &apos;Command&apos; on DomainRelationship &apos;OptionHasCommands&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasTypes/Type.DisplayName" xml:space="preserve">
-    <value>Type</value>
-    <comment>DisplayName for DomainRole &apos;Type&apos; on DomainRelationship &apos;OptionHasTypes&apos;</comment>
+  <data name="Ufba.Ev.OptionHasCommands/Command.DisplayName" xml:space="preserve">
+    <value>Command</value>
+    <comment>DisplayName for DomainRole &apos;Command&apos; on DomainRelationship &apos;OptionHasCommands&apos;</comment>
   </data>
-  <data name="Ufba.Ev.OptionHasTypes/Type.PropertyDisplayName" xml:space="preserve">
+  <data name="Ufba.Ev.OptionHasCommands/Command.PropertyDisplayName" xml:space="preserve">
     <value>Option</value>
-    <comment>PropertyDisplayName for DomainRole &apos;Type&apos; on DomainRelationship &apos;OptionHasTypes&apos;</comment>
+    <comment>PropertyDisplayName for DomainRole &apos;Command&apos; on DomainRelationship &apos;OptionHasCommands&apos;</comment>
   </data>
   <data name="Ufba.Ev.OptionTypes/User.DisplayName" xml:space="preserve">
     <value>User</value>
